[package]
name = "cj-nbt"
description = "CJ's simple Minecraft NBT editor built with love in Rust :)"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
# GUI library
fltk = "1.2.26"

# Serialization & Deserialization
serde = "1.0.133"
serde_json = "1.0.74"
# NBT support
hematite-nbt = "0.5.2"
byteorder = "1.4.3"
flate2 = "1.0.22"
cesu8 = "1.1.0"

[build-dependencies]
fl2rust = "0.4.16"
